--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "clean-webpack-plugin": "^0.1.9",
+    "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.23.1",
     "ejs": "^2.4.2",
     "file-loader": "^0.8.5",
