--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ejs": "^2.4.2",
     "file-loader": "^0.8.5",
     "generate-asset-webpack-plugin": "^0.3.0",
+    "gh-pages-webpack-plugin": "^1.0.0",
     "jsx-loader": "^0.13.2",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
