--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --hot --inline --color --progress",
-    "prd": "NODE_ENV=production webpack"
+    "prd": "NODE_ENV=production webpack --color --progress"
   },
   "repository": {
     "type": "git",
